@@ -1708,24 +1708,6 @@ operator|.
 name|getName
 argument_list|()
 decl_stmt|;
-DECL|field|DFS_WEBHDFS_ENABLED_KEY
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|DFS_WEBHDFS_ENABLED_KEY
-init|=
-literal|"dfs.webhdfs.enabled"
-decl_stmt|;
-DECL|field|DFS_WEBHDFS_ENABLED_DEFAULT
-specifier|public
-specifier|static
-specifier|final
-name|boolean
-name|DFS_WEBHDFS_ENABLED_DEFAULT
-init|=
-literal|true
-decl_stmt|;
 DECL|field|DFS_WEBHDFS_USER_PATTERN_KEY
 specifier|public
 specifier|static
