@@ -1430,43 +1430,6 @@ name|getCanonicalUri
 argument_list|()
 return|;
 block|}
-comment|/** Is WebHDFS enabled in conf? */
-DECL|method|isEnabled (final Configuration conf, final Log log)
-specifier|public
-specifier|static
-name|boolean
-name|isEnabled
-parameter_list|(
-specifier|final
-name|Configuration
-name|conf
-parameter_list|,
-specifier|final
-name|Log
-name|log
-parameter_list|)
-block|{
-specifier|final
-name|boolean
-name|b
-init|=
-name|conf
-operator|.
-name|getBoolean
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_WEBHDFS_ENABLED_KEY
-argument_list|,
-name|DFSConfigKeys
-operator|.
-name|DFS_WEBHDFS_ENABLED_DEFAULT
-argument_list|)
-decl_stmt|;
-return|return
-name|b
-return|;
-block|}
 DECL|field|tokenSelector
 name|TokenSelector
 argument_list|<
