@@ -788,17 +788,6 @@ name|setBoolean
 argument_list|(
 name|DFSConfigKeys
 operator|.
-name|DFS_WEBHDFS_ENABLED_KEY
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-name|DFSConfigKeys
-operator|.
 name|DFS_NAMENODE_AUDIT_LOG_ASYNC_KEY
 argument_list|,
 name|useAsyncLog
