@@ -501,17 +501,6 @@ argument_list|()
 decl_stmt|;
 name|conf
 operator|.
-name|setBoolean
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_WEBHDFS_ENABLED_KEY
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|conf
-operator|.
 name|setLong
 argument_list|(
 name|DFSConfigKeys
