@@ -1433,17 +1433,6 @@ name|sslConfDir
 decl_stmt|;
 name|clusterConf
 operator|.
-name|setBoolean
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_WEBHDFS_ENABLED_KEY
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|clusterConf
-operator|.
 name|set
 argument_list|(
 name|DFSConfigKeys
