@@ -283,17 +283,6 @@ operator|new
 name|Configuration
 argument_list|()
 decl_stmt|;
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_WEBHDFS_ENABLED_KEY
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
 return|return
 name|conf
 return|;
